--- a/test site/index.html
+++ b/test site/index.html
@@ -5,18 +5,20 @@
 <title>Prism</title>
 <link href="css/Style.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-4.0.0.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Ranga" rel="stylesheet">
+
 </head>
+	
 
 <body>
-
-	<header>
-	
+<header>
 		<div class="row">
 			<div class="col">
 				<nav class="style-nav color ">
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">Travel</a></li>
+						<li><a href="#">About us</a></li>
 						<li><a href="#">Art</a></li>
 						<li><a href="#">Food</a></li>
 					</ul>
@@ -50,7 +52,7 @@
   </div>
 </div>
 <div>
-	<h1 class="Center"> Company name </h1>
+	<h1 class="Center"> Cutting edge</h1>
 	</div>
 	<div>
 	<h1> About us</h1>
@@ -96,14 +98,14 @@
 	</div>
 	</div>
 </div>
-	<div>
-		<img src="img/banner-800x400.jpg" alt="grass">
-	</div>
-	<div>
-	<p> test</p>
+	<div class"container">
+		<div class="test"> TEst</div>
+		<img src="img/Grass2.png" alt="grass" class="Grass">
 	</div>
 	<footer>
-	
+	<div>
+	 <p> This is work has been done by group 4 Leonard Kuntz, James Gehman, Jacob Bower, Keith Brubaker </p>
+		</div>
 	</footer>
 </body>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
