--- a/test site/index.html
+++ b/test site/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Prism</title>
+<title>Cutting edge</title>
 <link href="css/Style.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-4.0.0.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
@@ -28,72 +28,50 @@
 	</header>
 	<div class="jumbotron jumbotron-fluid">
   <div class="container">
-	  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="/img/800x400.png" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/img/800x400.png" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/img/800x400.png" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+	  <h1 class="Center"> Cutting edge</h1>
 </div>
-  </div>
-</div>
-<div>
-	<h1 class="Center"> Cutting edge</h1>
 	</div>
+
+<br>
 	<div>
-	<h1> About us</h1>
-		<p> We are a gras</p>
+	<h1 class="text-center"> About us</h1>
+		<p class="text-center text-uppercase"> We are a gras cutting company that started in 2018 that is here to cut your grass at a decent price</p>
 	</div>
+	<br>
 	<div><p class="Center"> Our plans </p></div>	
 		<div class="row">
 <div class="col-lg-one-fourth">
 <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">Simple cut</div>
   <div class="card-body">
-    <h5 class="card-title">Success card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title">Basic cut</h5>
+    <p class="card-text">We cut your yard, this is our basic plan, all we do is cut your yard nothing more </p>
 	</div>
 	</div>
 	</div>
 <div class="col-lg-one-fourth">
 <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">level 2</div>
   <div class="card-body">
-    <h5 class="card-title">Success card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">We will cut your grass alone with weed wack</p>
 	</div>
 	</div>
 	</div>
 <div class="col-lg-one-fourth">
 <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">level 3</div>
   <div class="card-body">
-    <h5 class="card-title">Success card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+   
+    <p class="card-text">We will cut your grass along with weed wack and clean up the grass.</p>
 	</div>
 	</div>
 	</div>
 	
 <div class="col-lg-one-fourth">
 <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">Ultimate</div>
   <div class="card-body">
-    <h5 class="card-title">Success card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">This is the best package as it offers the most service, we will cut, weed wack, sweep and clean up everything. </p>
 	</div>
 	</div>
 	</div>
